fixes #783 - Browser shows console error when submitting a form with a "required" tagified input element which is empty

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -175,7 +175,11 @@
     ///////////////////////////////////////////
     // Hides originals
     + input,
-    + textarea{ display:none !important; }
+    + textarea{
+        position: absolute !important;
+        left: -9999em !important;
+        transform: scale(0) !important;
+    }
 
     &__tag{
         display    : inline-flex;
