makes more sense to use "auto" since the X button should be to the right (in LTR)

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -372,7 +372,7 @@
             width          : $size;
             height         : $size;
             margin-right   : $size/3;
-            margin-left    : -$size/3;
+            margin-left    : auto;
 
             overflow       : hidden;
             transition     : .2s ease-out;
