fixes #803 - added new setting for a11y - "focusableTags" which allows tags to get focus and also be deleted using backspace. if deleted, the next tag gets focus

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -246,7 +246,8 @@
             }
         }
 
-        &:hover:not([readonly]){
+        &:hover:not([readonly]),
+        &:focus{
             div{  // :not([contenteditable])
                 &::before{
                     $size: -$tagMargin/2;
