--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -119,7 +119,7 @@
     border        : 1px solid $tags-border-color;
     border        : 1px solid var(--tags-border-color);
     padding       : 0;
-    line-height   : normal;
+    line-height   : 0;
     cursor        : text;
     outline       : none;
     position      : relative;
@@ -204,6 +204,7 @@
         position   : relative;
         z-index    : 1;
         outline    : none;
+        line-height: normal;
         cursor     : default;
         transition : .13s ease-out;
 
@@ -435,7 +436,7 @@
         margin: $tagMargin;
         padding: $tag-pad;
         padding: var(--tag-pad, $tag-pad);
-        line-height: inherit;
+        line-height: normal;
         position: relative;
         white-space: pre-wrap; // #160 Line break (\n) as delimeter
         color: $input-color;
