now same styles as applied for "readonly" will also apply to "disabled", mainly so the X button will not be rendered

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -152,7 +152,7 @@
     }
 
     // Global "read-only" mode (no input button)
-    &[readonly]{
+    &[readonly], &[disabled]{
         &#{$self}--select{
             pointer-events: none;
         }
