fixes #1064 - Tagify input box is focused when clicking outside beside/below the input box

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -122,7 +122,7 @@
         to{ transform: rotate(1turn) }
     }
 
-    display       : flex;
+    display       : inline-flex;
     align-items   : flex-start;
     flex-wrap     : wrap;
     border        : 1px solid var(--tags-border-color);
