fixes #1054 - underlying Tagify shoud not get focused when selecting a suggestion from a Tagify sugegstion dropdown which is rendered over it.
Also added a feature which slowing hiding the selected sugegstion istead of all-at-once

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -677,8 +677,18 @@
                 background: var(--tagify-dd-color-primary);
                 color: white;
             }
+
             &:active{
                 filter: brightness(105%);
+            }
+
+            &--hidden{
+                padding-top: 0;
+                padding-bottom: 0;
+                margin: 0 1px;
+                font-size: 0;
+                pointer-events: none;
+                transition: .2s;
             }
         }
     }
