added `pre-wrap` to the styles of the dropdown items so multiple spaces could be rendered (fixes #1224)

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -679,6 +679,7 @@
             box-sizing: border-box;
             padding: var(--tagify-dd-item-pad);
             margin: 1px;
+            white-space: pre-wrap;
             cursor: pointer;
             border-radius: 2px;
             position: relative;
