--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -622,7 +622,7 @@
             }
         }
 
-        // when the dropdown shows next to the caret while typing
+        // when the dropdown is shown next to the caret while typing
         &[position="text"]{
             box-shadow: 0 0 0 3px rgba(var(--tagify-dd-color-primary), .1);
             font-size: .9em;
