in case the suggestions DropDown is placed inside the `tagify.DOM.scope` node, it should not inherit its `line-height` style

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -701,6 +701,7 @@
             outline: none;
             max-height: 60px;
             max-width: 100%;
+            line-height: normal;
 
             &--active{
                 background: var(--tagify-dd-color-primary);
